cmd/webserver/assets/sass/_global.scss
*::-webkit-scrollbar {
    width: 12px;
}

*::-webkit-scrollbar-thumb {
    background-color: #28a745;
    border-radius: 2px;
}

html {
    overflow-y: scroll;
}

body {
    background-color: #1b2738;

    #bg {
        display: none;
    }
}

// Only if background is there
body.bg {

    div.jumbotron {
        opacity: .9;
    }

    .container {
        .card {
            opacity: .95;
        }
    }

    #bg {
        top: 0;
        height: 620px;
        width: 100%;
        display: block;

        background-color: #1b2738;
        background-position-x: center;
        background-position-y: top;
        background-repeat: no-repeat;
        background-size: cover;
        position: absolute;

        &:before {
            content: '';
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            background-image: linear-gradient(to bottom, rgba(27, 39, 56, 1) 0, rgba(40, 134, 212, 0) 168px, rgba(41, 137, 216, 0) 452px, rgba(27, 39, 56, 1) 100%);
        }
    }
}

body.bg.dark {
    div.jumbotron {
        opacity: .95;
    }

    .container {
        .card {
            opacity: .98;
        }
    }
}

body.local {
    img:not([alt]) {
        border: solid 2px red;
    }
}

body.dark {

    div.container {
        color: #e9ecef;
    }

    div.jumbotron {
        background: #212529;
    }

    div.card {
        background: #212529;
    }

    img {
        filter: grayscale(30%);
    }

    // Tabs
    .nav-tabs {
        .nav-link.active {
            background-color: transparent;
            border-bottom-color: transparent;
            color: #28a745;
        }

        .nav-link:hover {
            border-bottom-color: transparent;
            color: #28a745;
        }
    }

    // Pagination
    .page-item {
        .page-link {
            background-color: transparent;
        }
    }

    .page-item.active {
        .page-link {
            border: 1px solid #dee2e6;
        }
    }

    // Forms
    .form-control {
        background-color: #21262a;
        color: #e9ecef;
    }

    .chosen-container {

        .chosen-choices {
            background-color: #21262a;
            color: #e9ecef;
        }

        .chosen-drop {
            background-color: #21262a;
            color: #e9ecef;
        }
    }

    .chosen-container-multi {
        .chosen-choices {
            .search-choice {
                background-color: #28a745;
                color: #e9ecef;
            }
        }
    }

    .slider {
        .noUi-target {
            background: #e9ecef;

            .noUi-handle {
                background: #212529;
                box-shadow: none;
            }
        }
    }

    // Tables
    table.table {
        color: #e9ecef;

        th[scope=col] {
            border-top: 1px solid #343a40;
        }

        tr:hover {
            color: #e9ecef;
        }

        .thead-light th {
            color: #fff;
            background-color: #343a40;
            border-color: #454d55;
        }

        td {
            border-top: 1px solid #343a40;
        }

        .table-success, .table-primary, .table-warning, .table-danger {
            th, td {
                color: #212529;
            }
        }
    }

    //
    #price-changes-page {
        table.table tbody {
            color: #212529;
        }
    }

    #app-page {
        #reviews {
            div[data-vote] {
                color: #212529;
            }
        }
    }
}

// Debug sizes
div#sizes {
    position: fixed;
    top: 0;
    left: 0;
    color: white;
    z-index: 20;
}

//
header {
    background-color: rgba(27, 39, 56, 0.9);
    position: relative;

    a.dropdown-item {
        img {
            margin-left: -10px;
        }
    }
}

@include media-breakpoint-up(lg) {

    header {
        background-color: transparent;
        position: static;
    }
}

//
div#loading, div#top {
    position: fixed;
    right: 20px;
    opacity: 0;
    display: inline-block;
    z-index: 1000;
}

div#loading.show, div#top.show {
    opacity: 1;
}

div#top {
    bottom: 20px;
    cursor: pointer;
    color: #fff;
    font-size: 30px;
    text-align: center;
    line-height: 40px;
    background-color: #28a745;
    width: 40px;
    height: 40px;
    transition: opacity 1s;
}

div#loading {
    top: 20px;
    width: 40px;
    height: 40px;
    pointer-events: none;

    img {
        width: 100%;
        animation: spin 1000ms linear infinite;

        @keyframes spin {
            from {
                transform: rotate(0deg);
            }
            to {
                transform: rotate(360deg);
            }
        }
    }
}

//
video {
    cursor: pointer;
}

//
.navbar {

    padding: 0.5rem 0;

    .navbar-brand {
        padding: 0;

        img {
            height: 40px;
        }
    }

    .dropdown {
        .dropdown-menu {
            margin: 0;
        }
    }

    .dropdown-mini {
        margin-left: -5px;

        .dropdown-toggle {
            padding-left: 0;
        }
    }

    #header-flag {
        a.dropdown-toggle {
            padding-top: 8px;
            padding-bottom: 0;
        }

        img {
            height: 24px;
        }
    }
}

.nav-tabs {
    li.nav-item {
        .nav-link.nav-link-small {
            padding: .5rem .5rem
        }
    }
}

.jumbotron {
    padding: 2rem;
    margin-bottom: 1rem;
    overflow: hidden;
    position: relative;
    margin-top: 1rem;

    @include media-breakpoint-up(lg) {
        margin-top: 0;
    }

    .close {
        position: absolute;
        right: 15px;
        top: 10px;
    }

    @include media-breakpoint-up(lg) {
        margin-top: 0;
    }

    .lead {
        margin: 0;
    }

    .social-buttons {

        position: absolute;
        right: 30px;
        bottom: 30px;

        @include media-breakpoint-up(md) {
            position: relative;
            right: 0;
            bottom: 0;
            float: right;
        }

        > div {
            height: 20px;

            > div {
                > span {
                    vertical-align: unset !important;
                }
            }
        }
    }

    img {
        position: relative;
        z-index: 100;
    }

    h1 {
        font-size: 1.5rem;

        @include media-breakpoint-up(sm) {
            font-size: 1.75rem;
        }

        @include media-breakpoint-up(md) {
            font-size: 2.0rem;
        }

        @include media-breakpoint-up(lg) {
            font-size: 2.25rem;
        }

        @include media-breakpoint-up(xl) {
            font-size: 2.5rem;
        }
    }
}

// Info panels
div.jumbotron.bottom {

    @extend .p-3;
    @extend .mb-0;

    display: table;
    width: 100%;

    h1 {
        display: table-cell;
        width: 1%;
        vertical-align: middle;

        i, svg {
            @extend .ml-2;
            @extend .mr-3;
        }
    }

    div {
        display: table-cell;
        vertical-align: middle;
    }
}

// Toasts
body {
    #toast-container > div {
        box-shadow: none;
    }
}

// Top ads
#ad-top {
    text-align: center;

    .ad-top-small {
        padding: 0;
        margin: 0 0 10px 0;
        height: 50px;
    }
}

// Side ads
.container:nth-of-type(2) {
    position: relative;

    .ad-left {
        position: absolute;
        left: -160px;
    }

    .ad-right {
        position: absolute;
        right: -160px;
    }
}

footer {
    small {
        margin: 30px 0;
        display: block;
        position: relative;
    }
}

[data-link] {
    cursor: pointer;
}

[data-link]:hover, [data-link]:hover span {
    text-decoration: underline;
}

.list-group {
    img.avatar {
        float: left;
        height: 48px;
        margin: -12px 20px -12px -20px;
    }
}

.alert p:last-child {
    margin-bottom: 0;
}

.tooltip-inner {
    //min-width: 200px;
    max-width: 300px !important;
}

.truncate {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

// New item fade
@keyframes fade-green {
    0% {
        background: #28a745;
    }
    100% {
        background: none;
    }
}

.fade-green {
    animation: fade-green 2s ease-in 1;
}

@keyframes fade-red {
    0% {
        background: $red;
    }
    100% {
        background: none;
    }
}

.fade-red {
    animation: fade-red 2s ease-in 1;
}

@keyframes fade-in {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.fade-in {
    animation: fade-in 0.5s;
    animation-fill-mode: forwards;
}

//
div.json {
    white-space: pre;
    max-height: 200px;
    overflow-y: scroll;
}

div.json.fullheight {
    max-height: none;
}

div.json-hover {
    @extend div.json;
    @extend div.json.fullheight;
}

// NoUI Slider
.slider {

    padding: 0 15px 0 15px;

    label {
        margin-left: -15px;
        margin-bottom: 18px;
    }

    .noUi-target {
        .noUi-base {
            .noUi-connect {
                background-color: $link-color;
            }
        }
    }
}

//
@mixin news-content {

    h1, h2, h3 {
        font-size: 1.5rem;
        font-weight: bold;
    }

    img {
        max-width: 100%;
    }

    iframe {
        width: 100%;
        height: 577px;
        border: 0;
    }

    br:first-child, br:last-child {
        display: none;
    }

    //p:empty {
    //    display: none;
    //}

    //br + br + br {
    //    display: none;
    //}

    //p:empty + p:empty + p:empty {
    //    display: none;
    //}
}

//
.wbba {
    word-break: break-all;
}

.cursor-pointer {
    cursor: pointer;
}

.nowrap {
    white-space: nowrap !important;
}

//
.nav-fill-mobile {
    .nav-item {
        flex: 1 1 auto;
        text-align: center;
        flex-wrap: wrap;
    }
}

@include media-breakpoint-up(md) {
    .nav-fill-mobile {
        .nav-item {
            flex: none;
            text-align: left;
        }
    }
}

//
.mark, mark {
    background: #28a74544;
}

